@@ -1600,30 +1600,35 @@ bool Client::CanIncreaseTradeskill(SkillUseTypes tradeskill) {
 	return true;
 }
 
-void ZoneDatabase::EnableRecipe(uint32 recipe_id)
+bool ZoneDatabase::EnableRecipe(uint32 recipe_id)
 {
 	char *query = 0;
 	uint32 qlen;
 	char errbuf[MYSQL_ERRMSG_SIZE];
+	uint32 affected_rows = 0;
 
 	qlen = MakeAnyLenString(&query, "UPDATE tradeskill_recipe SET enabled = 1 WHERE id = %u;", recipe_id);
 
-	if (!RunQuery(query, qlen, errbuf)) {
+	if (!RunQuery(query, qlen, errbuf, 0, &affected_rows)) {
 		LogFile->write(EQEMuLog::Error, "Error in EnableRecipe query '%s': %s", query, errbuf);
 	}
 	safe_delete_array(query);
+
+	return (affected_rows > 0);
 }
 
-void ZoneDatabase::DisableRecipe(uint32 recipe_id)
+bool ZoneDatabase::DisableRecipe(uint32 recipe_id)
 {
 	char *query = 0;
 	uint32 qlen;
 	char errbuf[MYSQL_ERRMSG_SIZE];
+	uint32 affected_rows = 0;
 
 	qlen = MakeAnyLenString(&query, "UPDATE tradeskill_recipe SET enabled = 0 WHERE id = %u;", recipe_id);
 
-	if (!RunQuery(query, qlen, errbuf)) {
+	if (!RunQuery(query, qlen, errbuf, 0, &affected_rows)) {
 		LogFile->write(EQEMuLog::Error, "Error in DisableRecipe query '%s': %s", query, errbuf);
 	}
 	safe_delete_array(query);
+	return (affected_rows > 0);
 }
